--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -74,6 +74,25 @@ cd ../mono
 make
 }}}
 
+Why in the reverse order described here: http://www.mono-project.com/Compiling_Mono ?
+
+I propose:
+{{{
+cd mono
+./autogen.sh --prefix=/usr/local (or wherever)
+make
+cd ../libgdiplus
+./autogen.sh --prefix=/usr/local (or wherever)
+make
+}}}
+
+If you use a different prefix then you may need to adjust your LD_LIBRARY_PATH environment variable to ensure libgdiplus.so can be loaded.
+
+{{{
+export LD_LIBRARY_PATH=/your/own/prefix:$LD_LIBRARY_PATH
+}}}
+
+
 If you encounter any problem, that's most likely because of a missing dependency. Don't proceed as long as you can't build Mono from source!
 
 == Removing the pre-build version of Mono ==
@@ -98,7 +117,19 @@ NAnt is used to build GNUdental. NAnt probably already ships with your distribtu
 
 = Building =
 
-Just run `make`. It'll start the build and invoke NAnt.
+First, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it in a directory, say "od".  For the sake of the following, the directory where you checked out the sources of gnudental will be called "gd".
+
+For each directory that recursively matches the bash expansion: {{{Required*}}} in od where there is not a correspondingly named directory in gd, copy over that directory to its corresponding relative path in gd.  Or you can just do the following which is much easier to say:
+
+{{{
+$ cp -a od/gnudental/Required\ dlls/ gd/gnudental/
+$ cp -a od/gnudental/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
+$ cp -a od/gnudental/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
+}}}
+
+Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gd/gnudental/Required dlls/}}} and {{{gd/gnudental/SparksToothChart/RequiredDlls/}}}.
+
+Now run `make`. It'll start the build and invoke NAnt.  If the build breaks, check for bugs here: http://code.google.com/p/gnudental/issues/list
 
 = Creating the gnudental directories =
 
@@ -136,5 +167,8 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental for the first time =
 The first time you run GNUdental, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental will complain.
+
+
+
 
 
