--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,8 +1,8 @@
-#summary Getting started with GNUdental
+#summary Getting started with GNUdental(tm)
 
 = Introduction =
 
-This page will help you get started with GNUdental on your Linux computer.
+This page will help you get started with GNUdental^TM^ on your Linux computer.
 
 = Getting Mono =
 
@@ -113,11 +113,11 @@ You are now ready to go!
 
 = Getting NAnt =
 
-NAnt is used to build GNUdental. NAnt probably already ships with your distribtuion. If not, visit [http://nant.sourceforge.net] to download NAnt.
+NAnt is used to build GNUdental^TM^. NAnt probably already ships with your distribtuion. If not, visit [http://nant.sourceforge.net] to download NAnt.
 
-= Building =
+= Building GNUdental(tm) =
 
-First, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it in a directory, say "od".  For the sake of the following, the directory where you checked out the sources of gnudental will be called "gd".
+First, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it in a directory, say "od".  For the sake of the following, the directory where you checked out the sources of GNUdental^TM^ will be called "gd".
 
 For each directory that recursively matches the bash expansion: {{{Required*}}} in od where there is not a correspondingly named directory in gd, copy over that directory to its corresponding relative path in gd.  Or you can just do the following which is much easier to say:
 
@@ -131,7 +131,7 @@ Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format
 
 Now run `make`. It'll start the build and invoke NAnt.  If the build breaks, check for bugs here: http://code.google.com/p/gnudental/issues/list
 
-= Creating the gnudental directories =
+= Creating the GNUdental(tm) directories =
 
 It is recommended you create a directory structure like this:
   * /home/user/gnudental/data
@@ -141,9 +141,9 @@ It is recommended you create a directory structure like this:
   * /home/user/gnudental/export
   * /home/user/gnudental/letter
 
-= Installing the mySQL database =
+= Installing the MySQL(R) database =
 
-Get mySQL from your distribution. GNUdental uses the same database structure as Open Dental. You can get the database creation script from [http://www.open-dent.com/opendental.sql].
+Get MySQL(R) from your distribution. GNUdental^TM^ uses the same database structure as Open Dental. You can get the database creation script from [http://www.open-dent.com/opendental.sql].
 
 You'll need to modify the script a little. Remove this:
 {{{
@@ -165,8 +165,15 @@ Then, run
 mysql -h localhost -u root < opendental.sql
 }}}
 
-= Running GNUdental for the first time =
-The first time you run GNUdental, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental will complain.
+= Running GNUdental(tm) for the first time =
+The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
+
+
+
+
+
+
+
 
 
 
