--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -122,9 +122,9 @@ First, you'll need some dll files.  We are currently basing our build on v4.6.19
 For each directory that recursively matches the bash expansion: {{{Required*}}} in od where there is not a correspondingly named directory in gd, copy over that directory to its corresponding relative path in gd.  Or you can just do the following which is much easier to say:
 
 {{{
-$ cp -a od/gnudental/Required\ dlls/ gd/gnudental/
-$ cp -a od/gnudental/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
-$ cp -a od/gnudental/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
+cp -a od/gnudental/Required\ dlls/ gd/gnudental/
+cp -a od/gnudental/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
+cp -a od/gnudental/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
 }}}
 
 Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gd/gnudental/Required dlls/}}} and {{{gd/gnudental/SparksToothChart/RequiredDlls/}}}.
@@ -167,7 +167,6 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(tm) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
-
 
 
 
