--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -37,6 +37,7 @@ There is more! To build mono, you need to have quite some packages installed. He
 
 == List of required packages ==
 *Build tools:*
+ * `build-essential`
  * `automake1.9`
  * `autoconf`
 
@@ -65,18 +66,6 @@ There is more! To build mono, you need to have quite some packages installed. He
 
 == Building Mono ==
 To build mono, you would do this:
-{{{
-cd libgdiplus
-./autogen.sh
-make
-cd ../mono
-./autogen.sh
-make
-}}}
-
-Why in the reverse order described here: http://www.mono-project.com/Compiling_Mono ?
-
-I propose:
 {{{
 cd mono
 ./autogen.sh --prefix=/usr/local (or wherever)
@@ -131,7 +120,7 @@ Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format
 
 Now run `make`. It'll start the build and invoke NAnt.  If the build breaks, check for bugs here: http://code.google.com/p/gnudental/issues/list
 
-= Creating the GNUdental(tm) directories =
+= Creating the GNUdental(TM) directories =
 
 It is recommended you create a directory structure like this:
   * /home/user/gnudental/data
@@ -165,8 +154,9 @@ Then, run
 mysql -h localhost -u root < opendental.sql
 }}}
 
-= Running GNUdental(tm) for the first time =
+= Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
+
 
 
 
