--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -4,99 +4,67 @@
 
 This page will help you get started with GNUdental^TM^ on your Linux computer.
 
-= Getting Mono =
+= Development Environment =
 
-== Bootstrapping ==
-You currently need to have the latest version of Mono installed on your computer. To build Mono from SVN, you first need to have the Mono runtime and C# compiler installed on your computer. 
-
-If you are running ubuntu, you would typically do
-{{{
-sudo apt-get install mono mono-gmcs mono-gac mono-utils
-}}}
-
-*Note:*
- Mono is currently in the universe repository. Make sure you enable this repository.
-
-== Get the latest version from SVN ==
-Then, check out Mono from SVN. First you'll need to install [http://subversion.tigris.org Subversion].
-If you are running ubuntu, you would typically do
-{{{
-sudo apt-get install subversion
-}}}
-
-You'll need the libgdiplus, mono and mcs modules. See [http://www.mono-project.com/SVN] for more information.
-
-If you are running ubuntu, you would typically do
-{{{
-svn co svn://svn.myrealbox.com/source/trunk/libgdiplus
-svn co svn://svn.myrealbox.com/source/trunk/mono
-svn co svn://svn.myrealbox.com/source/trunk/mcs
-}}}
-
-Note: This will create three directories (libgdiplus, mono, mcs) at the working directory (where svn command is issued). Building mono (see below) requires mcs as a subdirectory of mono. Better change the last command to:
-{{{
-svn co svn://svn.myrealbox.com/source/trunk/mcs mono/mcs
-}}}
-or move mcs directory under mono by hand as a second step.
-
-There is more! To build mono, you need to have quite some packages installed. Here's a partial list of Ubuntu packages.
+First you need to set your development environment properly. Instructions below use an Ubuntu-6.10 installation as an example. Your GNU/Linux distribution may use different names, package management and conventions; use the following as suggestions.
 
 == List of required packages ==
-*Build tools:*
- * `build-essential`
- * `automake1.9`
- * `autoconf`
+If you are running ubuntu, you would typically do:
 
-*For libgdiplus:*
- * `libexif-dev`
- * `libexpat1-dev`
- * `libfontconfig1-dev`
- * `libfreetype6-dev`
- * `libjpeg62-dev`
- * `libpng12-dev`
- * `libtiff4-dev`
- * `libtiffxx0c2`
- * `libungif4-dev`
- * `libxft-dev`
- * `libxrender-dev`
- * `x11proto-render-dev`
+`sudo apt-get install
+subversion
+build-essential
+automake1.9
+autoconf
+libexif-dev
+libexpat1-dev
+libfontconfig1-dev
+libfreetype6-dev
+libjpeg62-dev
+libpng12-dev
+libtiff4-dev
+libtiffxx0c2 
+libungif4-dev
+libxft-dev
+libxrender-dev
+x11proto-render-dev
+autotools-dev 
+bison
+dpatch
+libtool
+libxml2-dev
+libxml2-dev
+libxslt1-dev
+m4
+mono
+mono-gmcs
+mono-gac
+mono-utils
+nant`
 
-*For mono:*
- * `autotools-dev`
- * `bison`
- * `dpatch`
- * `libtool`
- * `libxml2-dev`
- * `libxslt1-dev`
- * `m4`
+*Notes:*
+ # Mono is currently in the universe repository. Make sure you enable this repository. 
+ # You currently need to have the latest version of Mono installed on your computer. To build Mono from SVN, you first need to have a Mono runtime and C# compiler installed on your computer.
+ # NAnt is used to build GNUdental^TM^. NAnt probably already ships with your distribution. If not, [http://nant.sourceforge.net download NAnt].
 
-== Building Mono ==
-To build mono, you would do this:
-{{{
-cd mono
-./autogen.sh --prefix=/usr/local (or wherever)
-make
-cd ../libgdiplus
-./autogen.sh --prefix=/usr/local (or wherever)
-make
-}}}
+== Mono ==
+To successfully build GNUdental^TM^ you need the SVN version of libgdiplus, mono and mcs.
+Follow instructions in [http://www.mono-project.com/Compiling_Mono compiling mono] for more information.
 
-If you use a different prefix then you may need to adjust your LD_LIBRARY_PATH environment variable to ensure libgdiplus.so can be loaded.
+*Check out and build* libgdiplus, mono and mcs modules. 
+Run `make` but *do not* run `make install` yet.
 
-{{{
-export LD_LIBRARY_PATH=/your/own/prefix:$LD_LIBRARY_PATH
-}}}
+If you encounter any problem, that's most likely because of a missing dependency. 
 
+*_Do not proceed if you cannot build Mono from source!_*
 
-If you encounter any problem, that's most likely because of a missing dependency. Don't proceed as long as you can't build Mono from source!
-
-== Removing the pre-build version of Mono ==
-You can now remove the pre-build version of Mono. On Ubuntu:
+*Remove the pre-build version of Mono*
+On Ubuntu:
 {{{
 sudo apt-get remove mono mono-gmcs mono-gac mono-utils
 }}}
 
-== Installing Mono ==
+*Install libgdiplus and mono*
 {{{
 cd ../libgdiplus
 sudo make install
@@ -106,10 +74,6 @@ sudo make install
 
 You are now ready to go!
 
-= Getting NAnt =
-
-NAnt is used to build GNUdental^TM^. NAnt probably already ships with your distribtuion. If not, visit [http://nant.sourceforge.net] to download NAnt.
-
 = Building GNUdental(tm) =
 
 First, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it in a directory, say "od".  For the sake of the following, the directory where you checked out the sources of GNUdental^TM^ will be called "gd".
@@ -117,14 +81,16 @@ First, you'll need some dll files.  We are currently basing our build on v4.6.19
 For each directory that recursively matches the bash expansion: {{{Required*}}} in od where there is not a correspondingly named directory in gd, copy over that directory to its corresponding relative path in gd.  Or you can just do the following which is much easier to say:
 
 {{{
-cp -a od/gnudental/Required\ dlls/ gd/gnudental/
-cp -a od/gnudental/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
-cp -a od/gnudental/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
+cp -a od/ODSource-4-6-19/Required\ dlls/ gd/gnudental/
+cp -a od/ODSource-4-6-19/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
+cp -a od/ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
 }}}
 
 Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gd/gnudental/Required dlls/}}} and {{{gd/gnudental/SparksToothChart/RequiredDlls/}}}.
 
-Now run `make`. It'll start the build and invoke NAnt.  If the build breaks, check for bugs here: http://code.google.com/p/gnudental/issues/list
+Now run `make`. It'll start the build and invoke NAnt.  
+
+If the build breaks, check for previously [http://code.google.com/p/gnudental/issues/list reported issues]
 
 = Creating the GNUdental(TM) directories =
 
@@ -162,6 +128,27 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
