--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -77,19 +77,19 @@ You are now ready to go!
 
 = Building GNUdental(tm) =
 
-First, you need to [http://code.google.com/p/gnudental/source check out gnudental svn repository.]
+First, you need to [http://code.google.com/p/gnudental/source check out gnudental svn repository]. This will create a directory gnudental.
 
-Then, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it in a directory, say "od".  For the sake of the following, the directory where you checked out the sources of GNUdental^TM^ will be called "gd".
+Then, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it. For the sake of the following, the directory where you unzip ODSource and the directory where you checked out the sources of GNUdental^TM^ are the same.
 
-For each directory that recursively matches the bash expansion: {{{Required*}}} in od where there is not a correspondingly named directory in gd, copy over that directory to its corresponding relative path in gd.  Or you can just do the following which is much easier to say:
+Copy the required dll's from ODSource tree to gnudental source tree. Change to the working directory and do the following:
 
 {{{
-cp -a od/ODSource-4-6-19/Required\ dlls/ gd/gnudental/
-cp -a od/ODSource-4-6-19/SparksToothChart/RequiredDlls/ gd/gnudental/SparksToothChart/
-cp -a od/ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gd/gnudental/SparksToothChart/TestForm/
+cp -a ODSource-4-6-19/Required\ dlls/ gnudental/
+cp -a ODSource-4-6-19/SparksToothChart/RequiredDlls/ gnudental/SparksToothChart/
+cp -a ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gnudental/SparksToothChart/TestForm/
 }}}
 
-Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gd/gnudental/Required dlls/}}} and {{{gd/gnudental/SparksToothChart/RequiredDlls/}}}.
+Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gnudental/Required dlls/}}} and {{{gnudental/SparksToothChart/RequiredDlls/}}}.
 
 Now run `make`. It'll start the build and invoke NAnt.  
 
@@ -131,7 +131,6 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
-
 
 
 
