--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -45,9 +45,6 @@ mono-utils`
  # Mono is currently in the universe repository. Make sure you enable this repository. 
  # You currently need to have the latest version of Mono installed on your computer. To build Mono from SVN, you first need to have a Mono runtime and C# compiler installed on your computer.
 
-== Nant ==
-NAnt is used to build GNUdental^TM^. NAnt probably already ships with your distribution. Although you could perfectly use that, it will be removed when you uninstall pre-build mono (see bellow), due to its dependency on mono. It is thus recommented to [http://nant.sourceforge.net download NAnt] and follow [http://nant.sourceforge.net/release/0.85/help/introduction/installation.html these installation instructions].
-
 == Mono ==
 To successfully build GNUdental^TM^ you need the SVN version of libgdiplus, mono and mcs.
 Follow these instructions for [http://www.mono-project.com/Compiling_Mono compiling mono].
@@ -74,6 +71,51 @@ cd ../mono
 sudo make install
 }}}
 
+*Which resgen?*
+
+Run
+{{{
+cat `which resgen`
+}}}
+and see if it invokes `resgen.exe` that is under `/monodir/1.0` or
+`/monodir/2.0`. It should be `/monodir/2.0`.
+
+You will find two resgen scripts under `/usr/local/bin` (assuming you installed mono under `/usr/local`): `resgen` pointing to `/monodir/1.0` and `resgen2` pointing to `/monodir/2.0`. Rename `resgen` to `resgen1` and symlink `resgen2` to `resgen`.
+
+{{{
+sudo mv /usr/local/bin/resgen /usr/local/bin/resgen1
+sudo ln -s /usr/local/bin/resgen2 /usr/local/bin/resgen
+}}}
+
+Now run `resgen` and see if it supports the `/useSourcePath`.
+
+If it does then you're ok.
+
+== Nant ==
+[http://nant.sourceforge.net NAnt] is used to build GNUdental^TM^. NAnt probably already ships with your distribution, but you need the latest development version (Nightly Build). It is recommented to download the Latest Nightly Build binary; currently [http://nant.sourceforge.net/nightly/latest/nant-bin.tar.gz nant-0.86-nightly-2007-03-08]  and follow [http://nant.sourceforge.net/nightly/latest/help/introduction/installation.html these installation instructions].
+
+*Change NAnt.exe.config:*
+
+Run
+
+{{{
+pkg-config --modversion mono
+}}}
+
+If it returns 1.2.3, you should be all set. 
+
+_If it returns 1.2.3.50_ _*then*_ you need to overcome a bug in NAnt that makes it invoke an old version of resgen, by doing the following:
+
+To find out where NAnt.exe.config is, do
+{{{
+cat `which nant`
+}}}
+and find out where `NAnt.exe` hides. Propably, in `/usr/local/nant/bin` if you followed  the above instructions. In that same directory, open
+`NAnt.exe.config` and modify it like described in this bug report:
+ http://sourceforge.net/tracker/index.php?func=detail&aid=1688162&group_id=31650&atid=402868
+
+(Basically, replace every 1.2.4 by 1.2.3.50).
+
 You are now ready to go!
 
 = Building GNUdental(tm) =
@@ -92,7 +134,14 @@ cp -a ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gnudental/SparksTo
 
 Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gnudental/Required dlls/}}} and {{{gnudental/SparksToothChart/RequiredDlls/}}}.
 
-Now run `make`. It'll start the build and invoke NAnt.  
+Now you are ready to build:
+
+{{{
+export MONO_IOMAP=all
+make
+}}}
+
+It'll start the build and invoke NAnt.
 
 If the build breaks, check for previously [http://code.google.com/p/gnudental/issues/list reported issues]
 
@@ -132,6 +181,13 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
+
+
+
+
+
+
+
 
 
 
