--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -110,7 +110,7 @@ To find out where NAnt.exe.config is, do
 {{{
 cat `which nant`
 }}}
-and find out where `NAnt.exe` hides. Propably, in `/usr/local/nant/bin` if you followed  the above instructions. In that same directory, open
+and find out where `NAnt.exe` hides. Probably, in `/usr/local/nant/bin` if you followed  the above instructions. In that same directory, open
 `NAnt.exe.config` and modify it like described in this bug report:
  http://sourceforge.net/tracker/index.php?func=detail&aid=1688162&group_id=31650&atid=402868
 
@@ -181,7 +181,6 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
-
 
 
 
