--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -171,8 +171,9 @@ Date:                  2005/03/29 07:56:53
 }}}
 and replace it with
 {{{
-create database opendental
+create database opendental;
 }}}
+(the semi-colon is important).
 
 Then, run
 {{{
@@ -181,7 +182,6 @@ mysql -h localhost -u root < opendental.sql
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
-
 
 
 
