--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -3,5 +3,10 @@
 The main window in a Debian GNU/Linux desktop:
 [http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot1-800x500.png]
 
+
 The appointments screen:
 [http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental.png]
+
+
+The family screen:
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-1.png]
