Edited wiki page through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -11,3 +11,23 @@ The appointments screen:
 The family screen:
 
 [http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-1.png]
+
+The account screen:
+
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-2.png]
+
+The treatment plan screen:
+
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-3.png]
+
+The chart screen:
+
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-4.png]
+
+The images screen:
+
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-5.png]
+
+The manage screen:
+
+[http://www.gnudental.org/Members/mmaglis/screenshots/Screenshot-Open%20Dental-6.png]
