--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,4 +1,4 @@
-#summary Showing GNUdental in action. These are sample screenshots.  Look here for more: [http://www.gnudental.org/Members/mmaglis/screenshots/].
+#summary Showing GNUdental in action. These are sample screenshots.  Look here for more: "http://www.gnudental.org/Members/mmaglis/screenshots".
 
 The main window in a Debian GNU/Linux desktop:
 
