--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -120,19 +120,27 @@ You are now ready to go!
 
 = Building GNUdental(tm) =
 
-First, you need to [http://code.google.com/p/gnudental/source check out gnudental svn repository]. This will create a directory gnudental.
+~~First, you need to [http://code.google.com/p/gnudental/source check out gnudental svn repository]. This will create a directory gnudental.~~
 
-Then, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it. For the sake of the following, the directory where you unzip ODSource and the directory where you checked out the sources of GNUdental^TM^ are the same.
+Because of the very rapid pace of development on the Open Dental code base, we are currently recommending that developers check code out from [https://70.90.133.65:23793/svn/opendental/opendental4.7 there] and first work on just building and testing that code.  This is a rapidly evolving code tree at the moment and unless you're anxious to make changes that you don't see being made already, we recommend that new developers adopt the role of bug reporter (use the issue tracker in this project as the Bugzilla at Open Dental is open only to reports from developers with write access to that repository) and make a point of building and running as many of the new revisions at that code tree as possible and reporting problems found by doing so [http://code.google.com/p/gnudental/issues/list here].
 
-Copy the required dll's from ODSource tree to gnudental source tree. Change to the working directory and do the following:
+More detailed instructions on building the Open Dental code can be found [http://opendental.carlier-online.be/ here].
 
-{{{
+~~Then, you'll need some dll files.  We are currently basing our build on v4.6.19 of Open Dental, so download http://www.gnudental.org/ODSource-4-6-19.zip and unzip it. For the sake of the following, the directory where you unzip ODSource and the directory where you checked out the sources of GNUdental^TM^ are the same.~~
+
+~~Copy the required dll's from ODSource tree to gnudental source tree. Change to the working directory and do the following:~~
+
+~~{{{
 cp -a ODSource-4-6-19/Required\ dlls/ gnudental/
 cp -a ODSource-4-6-19/SparksToothChart/RequiredDlls/ gnudental/SparksToothChart/
 cp -a ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gnudental/SparksToothChart/TestForm/
-}}}
+}}}~~
 
-Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gnudental/Required dlls/}}} and {{{gnudental/SparksToothChart/RequiredDlls/}}}.
+~~Next, you'll need to download {{{Tao-1.3.0-1 Release}}} in your preferred format from http://www.taoframework.com/Downloads and then unzip it and copy {{{Tao.OpenGl.ExtensionLoader.dll}}} to {{{gnudental/Required dlls/}}} and {{{gnudental/SparksToothChart/RequiredDlls/}}}.~~
+
+,,Text lined out above applies to building GNUdental(tm) which we don't recommend spending time on right now (this has been true for the past two to three weeks as of 13 April 2007).
+
+When GNUdental(tm) originally forked from Open Dental, we used the latest code available from that project, but that was about 5 weeks ago now, and a great deal has changed in the Open Dental code in that time.  We will eventually replace all of the code in this project's repo (nearly all changes to which were made by Frederik Carlier who went on to incorporate those changes into Open Dental) with that of Open Dental, but we're waiting until the pace of change on Open Dental slows down a bit.  And then we need to decide just what it is we need to do differently than Open Dental---originally, this fork was about getting Open Dental to run on Linux, but that milestone has been [http://www.gnudental.org reached] (though ATM the binary is not stable and still has many bugs I believe)) thanks to Frederik Carlier, and it appears that this time (different than all of his other promises of the past 3+ years in regards to Linux support), Dr. Sparks was serious when he promised Linux support in Open Dental.  The sole reason for the change in his level of priority for supporting Linux from ("...later... ...not a priority for us now...") to *now!* was the start of the GNUdental(tm) project, but we fully expect that his enthusiasm for such plans will disappear if the GNUdental(tm) project eases up the pressure on him.  Additionally, it's clear that Dr. Sparks differs in his ethics and philosophy from most of the free software community, and also that Open Dental has some major design flaws (such as requiring root user access to the MySQL server in order to function) that have shown no sign of changing over the past two years.  Therefore, GNUdental(tm) has more reason than ever to persevere, and I for one (Kevin) will continue this project forever even if for nobody else but my family.,,
 
 Now you are ready to build:
 
@@ -145,7 +153,7 @@ It'll start the build and invoke NAnt.
 
 If the build breaks, check for previously [http://code.google.com/p/gnudental/issues/list reported issues]
 
-At the moment, the Open Dental code base is at revision 93 and the GNUdental(tm) code base is at revision 128.  If you're trying this for the first time, you can expect that:
+At the moment, the Open Dental code base is at revision 154 and the GNUdental(tm) code base is at revision 128.  If you're trying this for the first time, you can expect that:
 
   # both of these revisions should *compile* successfully,
   # both of these revisions should produce two executable files named 'OpenDental.exe' and 'OpenDentServer.exe' in the build tree relative path 'build/mono-2.0.unix/opendental-4.7-debug/bin/'.
@@ -199,4 +207,3 @@ and enter your MySQL root password when prompted.
 
 = Running GNUdental(TM) for the first time =
 The first time you run GNUdental^TM^, you'll be asked to upgrade your database. Accept to do so. For the data directories, enter the directories you created above. Remember to include a trailing "/" after the directory name. If not, GNUdental^TM^ will complain.
-
