Edited wiki page through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -140,7 +140,7 @@ cp -a ODSource-4-6-19/SparksToothChart/TestForm/RequiredDlls/ gnudental/SparksTo
 
 Text lined out above applies to building GNUdental(tm) which we don't recommend spending time on right now (this has been true for the past two to three weeks as of 13 April 2007).
 
-When GNUdental(tm) originally forked from Open Dental, we used the latest code available from that project, but that was about 5 weeks ago now, and a great deal has changed in the Open Dental code in that time.  We will eventually replace all of the code in this project's repo (nearly all changes to which were made by Frederik Carlier who went on to incorporate those changes into Open Dental) with that of Open Dental, but we're waiting until the pace of change on Open Dental slows down a bit.  And then we need to decide just what it is we need to do differently than Open Dental---originally, this fork was about getting Open Dental to run on Linux, but that milestone has been [http://www.gnudental.org reached] (though ATM the binary is not stable and still has many bugs I believe)) thanks to Frederik Carlier, and it appears that this time (different than all of his other promises of the past 3+ years in regards to Linux support), Dr. Sparks was serious when he promised Linux support in Open Dental.  The sole reason for the change in his level of priority for supporting Linux from ("...later... ...not a priority for us now...") to *now!* was the start of the GNUdental(tm) project, but we fully expect that his enthusiasm for such plans will disappear if the GNUdental(tm) project eases up the pressure on him.  Additionally, it's clear that Dr. Sparks differs in his ethics and philosophy from most of the free software community, and also that Open Dental has some major design flaws (such as requiring root user access to the MySQL server in order to function) that have shown no sign of changing over the past two years.  Therefore, GNUdental(tm) has more reason than ever to persevere, and I for one (Kevin) will continue this project forever even if for nobody else but my family.
+When GNUdental(tm) originally forked from Open Dental, we used the latest code available from that project, but that was about 5 weeks ago now, and a great deal has changed in the Open Dental code in that time.  We will eventually replace all of the code in this project's repo (nearly all changes to which were made by Frederik Carlier who went on to incorporate those changes into Open Dental) with that of Open Dental, but we're waiting until the pace of change on Open Dental slows down a bit.  And then we need to decide just what it is we need to do differently than Open Dental---originally, this fork was about getting Open Dental to run on Linux, but that milestone has been [http://www.gnudental.org reached] (though ATM the binary is not stable and still has many bugs I believe)) thanks to Frederik Carlier, and it appears that this time (different than all of his other promises of the past 3+ years in regards to Linux support), Dr. Sparks was serious when he promised Linux support in Open Dental.  The sole reason for the change in his level of priority for supporting Linux from ("...later... ...not a priority for us now...") to *now!* was the start of the GNUdental(tm) project, but we fully expect that his enthusiasm for such plans will disappear if the GNUdental(tm) project eases up the pressure on him.  Additionally, it's clear that Dr. Sparks differs in his ethics and philosophy from most of the free software community, and also that Open Dental has some major design flaws (such as requiring root user access to the MySQL server in order to function) that have shown no sign of changing over the past two years.  Therefore, even though it's original raison d'être seems to have been OBE due to the spark that we lit under Dr. Sparks' derrière, GNUdental(tm) has more reason than ever to persevere, and I for one (Kevin) will continue this project forever even if for nobody else but my family, because Dr. Sparks has repeatedly demonstrated himself to be a man of low or no ethical values in my opinion so I would never trust my family's business to his questionable sense of ethics.
 
 Now you are ready to build:
 
